Convert Vanilla JS to React based for dev tools panel.

--- a/public/devtools-panel.html
+++ b/public/devtools-panel.html
@@ -106,19 +106,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>🛠️ DOM Mapper DevTools</h1>
-        <div class="welcome-text">Welcome custom dev tools</div>
-        <div class="status">
-            ✅ DevTools panel is ready
-        </div>
-        <p>This is your custom DOM Mapper development tools panel.</p>
-
-        <!-- Text Mapper section will be inserted here by JavaScript -->
-        <div id="textMapperContainer"></div>
-    </div>
-
-    <script src="text-mapper-ui.js"></script>
+    <div id="root"></div>
     <script src="devtools-panel.js"></script>
 </body>
 
