CSS: apply style  to tree view

--- a/public/devtools-panel.html
+++ b/public/devtools-panel.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>DOM Mapper DevTools</title>
+    <link rel="stylesheet" href="devtools-panel.css">
     <style>
         body {
             margin: 20px;
