--- a/public/devtools-panel.html
+++ b/public/devtools-panel.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DOM Mapper DevTools</title>
+    <title>DOM Mapper Panel</title>
     <link rel="stylesheet" href="devtools-panel-base.css">
     <link rel="stylesheet" href="devtools-panel.css">
 </head>
 
 <body>
+    <h1 tabindex="10">Marson Panel</h1>
     <div id="root"></div>
     <script src="devtools-panel.js"></script>
 </body>
