Add comments to 2 <title />, will read by screen reader (SR)

--- a/public/devtools-panel.html
+++ b/public/devtools-panel.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DOM Mapper Panel</title>
+    <!-- This title will be read second when the panel is focused. It will be read '<title> document' -->
+    <title>DOM Mapper</title>
     <link rel="stylesheet" href="devtools-panel-base.css">
     <link rel="stylesheet" href="devtools-panel.css">
 </head>
