Empty the <title >, so SR will read shorter line

--- a/public/devtools-panel.html
+++ b/public/devtools-panel.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <!-- This title will be read second when the panel is focused. It will be read '<title> document' -->
-    <title>DOM Mapper</title>
+    <!-- We will the <title > empty so the screen reader will read only 'document' which is shorter -->
+    <title></title>
     <link rel="stylesheet" href="devtools-panel-base.css">
     <link rel="stylesheet" href="devtools-panel.css">
 </head>
