Replace tag line about DOMMapper

--- a/public/devtools-panel.html
+++ b/public/devtools-panel.html
@@ -15,7 +15,7 @@
     <h1 tabindex="10">DOM Mapper</h1>
 
     <div class="welcome-text">
-        <small style="color: #666;">Dev Tools to map hierarchy of DOM elements</small>
+        <small style="color: #666;">Simplifying the DOM for cleaner CSS selector mapping</small>
     </div>
     <div id="root"></div>
 
